Fix spacing in Adventure Log

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -168,6 +168,10 @@
     }
 }
 
+.post-blurb {
+    padding-bottom: 20px;
+}
+
 .post-list {
     list-style: none;
     
